src/main/java/com/example/timelist/error/GroupNotFoundException.java
package com.example.timelist.error;

public class GroupNotFoundException extends RuntimeException {
}
